--- a/project.ipynb
+++ b/project.ipynb
@@ -50,6 +50,16 @@
     "plt.yticks([100000,200000,300000,400000,500000])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#NINH HANH\n",
+    "##HANH NHO\n",
+    "###HANH NHO HON\n",
+    "####HANH BE TI"
+   ]
   }
  ],
  "metadata": {
