--- a/project.ipynb
+++ b/project.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "hay ho\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#2. Thực hiện xử lí dữ liệu\n",
     "##Importing library"
    ]
