--- a/project.ipynb
+++ b/project.ipynb
@@ -4,15 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "hay ho\n"
+    "#2. Thực hiện xử lí dữ liệu\n",
+    "##Importing library"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#2. Thực hiện xử lí dữ liệu\n",
-    "##Importing library"
+    "##Đọc dữ liệu và chuẩn bị cho các thao tác với data set\n"
    ]
   }
  ],
